# posts_service

./: Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
posts/: api.py  models.py  schemas.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_author_post_short_text.py
posts_service/: api.py  main.py  settings.py  urls.py
