[tool.poetry]
name = "posts-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "posts_service"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
django-ninja = "^0.19.1"
rich = "^12.6.0"
django-mysql = "^4.7.1"
django-cors-headers = "^3.13.0"
pika = "^1.3.1"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
